--- a/index.html
+++ b/index.html
@@ -2,31 +2,8 @@
 <head>
     <title>User Session </title>
     <script type="text/javascript" src="node_modules/socket.io-client/dist/socket.io.js"></script>
+    <script type="text/javascript" src="node_modules/angular/angular.js" ></script>
     <script src="http://wzrd.in/standalone/uuid%2Fv1@latest"></script>
-    <script>
-        var socket = io('http://localhost:3000');
-        var uniqueID = uuidv1(); // To generate unique IDs.
-        var clients = ['client1', 'clinet2', 'client3', 'client4', 'client5'];
-        // Just to select randpom number for demo purpose.
-        // This should be ideally replaced with 'selecting different clients functionlaity'
-        var randomNumber = Math.floor(Math.random() * (5) + 0);
-        var room = {
-            name: clients[randomNumber],
-            sessionID : uniqueID
-        };
-        socket.on('connect', function(){
-            socket.emit('create', room);
-        });
-
-        socket.on('event', function (eventRoom) {
-            console.log("Data from server....", eventRoom);
-            if( eventRoom.name === room.name) {
-                // If any other user enters the same client then close this connection or redirects the user.
-                socket.disconnect();
-                document.querySelector('.displayData').innerHTML = '<p> You are disconnected as some other user enterted the room. The other user session ID is '+room.sessionID;
-            }
-        });
-    </script>
 
     <style>
         body {
@@ -36,9 +13,40 @@
     </style>
 
 </head>
-<body>
-  <div class="displayData">
+<body ng-app="demo">
+  <div class="displayData" ng-controller="DemoCtrl">
       <p>You are currently connected...</p>
   </div>
+  <script>
+
+      var app = angular.module('demo', [])
+      // We can use controller, service or factory based on the need.
+          .controller('DemoCtrl', function(){
+              var vm = this;
+              var socket = io('http://localhost:3000');
+              var uniqueID = uuidv1(); // To generate unique IDs.
+              var clients = ['client1', 'clinet2', 'client3', 'client4', 'client5'];
+              // Just to select randpom number for demo purpose.
+              // This should be ideally replaced with 'selecting different clients functionlaity'
+              var randomNumber = Math.floor(Math.random() * (5) + 0);
+              var room = {
+                  name: clients[randomNumber],
+                  sessionID : uniqueID
+              };
+              socket.on('connect', function(){
+                  socket.emit('create', room);
+              });
+
+              socket.on('event', function (eventRoom) {
+                  console.log("Data from server....", eventRoom);
+                  if( eventRoom.name === room.name) {
+                      // If any other user enters the same client then close this connection or redirects the user.
+                      socket.disconnect();
+                      document.querySelector('.displayData').innerHTML = '<p> You are disconnected as some other user enterted the room. The other user session ID is '+room.sessionID;
+                  }
+              });
+          });
+  </script>
 </body>
 </html>
+
